# Industriel_monitoring_anomaly_detection

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: config.yaml
data/sample/: sensor_stream.csv
src/api/: main.py
src/ingestion/: simulate_sensors.py
src/models/: infer.py  train.py
src/preprocessing/: preprocess.py
tests/: test_smoke.py
