[project]
name = "industriel-monitoring-anomaly-detection"
version = "0.1.0"
description = "Intelligent industrial monitoring system for anomaly detection and real-time alerts based on IoT data"
authors = [
    {name = "Asmaa",email = "asmaa.elrherari@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "faker (>=40.28.1,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
